--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="C:\Users\Dell\Downloads\msd.jpg" alt="Pic of MSD"></td>
+      <td><img src="https://i.pinimg.com/564x/a0/eb/4d/a0eb4d7d2fac6a36464a1dc31c868ab1.jpg" alt="Pic of MSD"></td>
       <td><h1>Arun Prasaad K</h1>
       <p><em>Student at <strong><a href="https://www.tce.edu/">Thiagarajar College of Engineering</a></strong></em></p>
       <p>I am 19 years old and I am good at mobile games and well disciplined</p></td>
